tests/negative/generics/const_fn_value.orng
fn template(const n: Int) -> Int {
    n + 4
}

fn main() -> Char {
    let x: Int -> Int = template
    _ = x
    'd'
}
